--- a/appcore/templates/home/index.html
+++ b/appcore/templates/home/index.html
@@ -1,4 +1,4 @@
-{% extends "layout/aws.html" %}
+{% extends "layout/main.html" %}
 {% block body %}
     <div class="container-fluid text-container">
         You're in the right place :) ?
